--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,10 +23,11 @@ jobs:
 
       - name: Migrate
         run: | 
-          echo ${{ secrets.SSH_KEY }} >> key.pem
+          echo "${{secrets.SSH_KEY}}" > key.pem
+          chmod 600 key.pem
 
           # create ssh tunnel
-          ssh -i key.pem -L ${{secrets.MIGRATION_URL}} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} -fN 
+          ssh -i key.pem -o StrictHostKeyChecking -L ${{secrets.MIGRATION_URL}} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} -fN 
 
           # run migration
           npx drizzle-kit migrate
