--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,7 +27,7 @@ jobs:
           chmod 600 key.pem
 
           # create ssh tunnel
-          ssh -i key.pem -o StrictHostKeyChecking -L ${{secrets.MIGRATION_URL}} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} -fN 
+          ssh -i key.pem -L ${{secrets.MIGRATION_URL}} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} -fN 
 
           # run migration
           npx drizzle-kit migrate
