--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -10,6 +10,10 @@ on:
 
 jobs:
   migration:
+    on: 
+      paths:
+        - src/db/migrations/**'
+
     runs-on: ubuntu-latest
 
     environment: deploy
@@ -26,8 +30,10 @@ jobs:
 
       - name: Migrate
         run: | 
+          echo "${{secrets.env}}" > .env
           echo "${{secrets.SSH_KEY}}" > key.pem
           chmod 600 key.pem
+          chmod 600 .env
 
           # create ssh tunnel
           ssh -i key.pem -o StrictHostKeyChecking=no -L ${{secrets.MIGRATION_URL}} ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} -fN 
