--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -4,13 +4,24 @@ on:
   push:
     branches:
       - master
+    paths:
+      - "src/**"
+      - "dockerfile"
+      - "package.json"
+      - "yarn.lock"
+      - ".gitub/workflows/deployment.yaml"
   pull_request:
     branches:
       - master
+    paths:
+        - "src/**"
+        - "dockerfile"
+        - "package.json"
+        - "yarn.lock"
+        - ".gitub/workflows/deployment.yaml"
 
 jobs:
   deploy:
-    needs: migration
     runs-on: ubuntu-latest
 
     environment: deploy
