--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -76,8 +76,7 @@ jobs:
             docker pull ${{ env.DOCKER_IMAGE }}
 
             # Run the new container
-            ls
-            cd /app
+            cd app
             docker run -d --name lfg -p 80:3000 --env-file env ${{ env.DOCKER_IMAGE }}
 
             # make sure container is running
