--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "packageManager": "yarn@4.4.0",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.645.0",
     "@getbrevo/brevo": "^2.2.0",
     "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^5.0.0",
@@ -25,8 +26,6 @@
     "argon2": "^0.40.3",
     "dayjs": "^1.11.12",
     "drizzle-orm": "^0.32.2",
-    "firebase": "^10.13.0",
-    "firebase-admin": "^12.3.1",
     "i18n": "^0.15.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
