--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -68,21 +68,39 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.SSH_KEY }}
+          PORT: ${{ secrets.DOCKER_PORT }}
+          NODE_ENV: ${{ secrets.DOCKER_NODE_ENV }}
+          APP_BASE_URL: ${{ secrets.DOCKER_APP_BASE_URL }}
+          POSTGRES_URL: ${{ secrets.DOCKER_POSTGRES_URL }}
+          FIREBASE_API_KEY: ${{ secrets.DOCKER_FIREBASE_API_KEY }}
+          JWT_SECRET: ${{ secrets.DOCKER_JWT_SECRET }}
+          BREVO_API_KEY: ${{ secrets.DOCKER_BREVO_API_KEY }}
+          USER_ACTION_REQUIRED_TEMPLATE_ID: ${{ secrets.DOCKER_USER_ACTION_REQUIRED_TEMPLATE_ID }}
+          INFORMATION_TEMPLATE_ID: ${{ secrets.DOCKER_INFORMATION_TEMPLATE_ID }}
           script: |
             # login to github registry
             docker login ghcr.io -u ${{ github.actor }} -p ${{ secrets.GITHUB_TOKEN }}
 
-            # Stop and remove any existing container
-            docker rm -f lfg-api || true
-
             # Pull the latest Docker image
             docker pull ${{ env.DOCKER_IMAGE }}
 
-            # Run the new container
-            cd app
-            docker run -d --name lfg-api -p 80:3000 --env-file env ${{ env.DOCKER_IMAGE }}
+            # Update env file
+            rm env
+            touch /app/env
+            echo "PORT='${{ env.PORT }}'" >> /app/env
+            echo "NODE_ENV='${{ env.NODE_ENV }}'" >> /app/env
+            echo "APP_BASE_URL='${{ env.APP_BASE_URL }}'" >> /app/env
+            echo "POSTGRES_URL='${{ env.POSTGRES_URL }}'" >> /app/env
+            echo "FIREBASE_API_KEY='${{ env.FIREBASE_API_KEY }}'" >> /app/env
+            echo "JWT_SECRET='${{ env.JWT_SECRET }}'" >> /app/env
+            echo "BREVO_API_KEY='${{ env.BREVO_API_KEY }}'" >> /app/env
+            echo "USER_ACTION_REQUIRED_TEMPLATE_ID='${{ env.USER_ACTION_REQUIRED_TEMPLATE_ID }}'" >> /app/env
+            echo "INFORMATION_TEMPLATE_ID='${{ env.INFORMATION_TEMPLATE_ID }}'" >> /app/env
+
+            # run container
+            docker-compose up -d
 
             # make sure container is running
-            docker ps --format '{{.Names}}' | grep -q "lfg-api" || { echo "Error: Container is not running."; exit 1; }
+            docker ps --format '{{.Names}}' | grep -q "lfgapi" || { echo "Error: Container is not running."; exit 1; }
 
     
